--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>math.numeric-tower</artifactId>
   <version>0.0.5-SNAPSHOT</version>
-  <name>${project.artifactId}</name>
+  <name>math.numeric-tower</name>
 
   <parent>
     <groupId>org.clojure</groupId>
     <artifactId>pom.contrib</artifactId>
-    <version>0.1.2</version>
+    <version>0.2.0</version>
   </parent>
 
   <developers>
